src/org/unpython/compiler/frontend/PythonParser.java
// $ANTLR 3.0.1 Python.g 2008-07-22 13:46:53

/** unPython : Python to C compiler
    Copyright (C) 2008  Rahul Garg

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License version 3 as published by
    the Free Software Foundation.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    
    Rahul Garg grants some additional permissions as per GNU General Public License version 3 
  section 7. These additional permissions can be found in a file exceptions.txt.
*/
package org.unpython.compiler.frontend;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

/** unPython : Python to C compiler
    Copyright (C) 2008  Rahul Garg

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License version 3 as published by
    the Free Software Foundation.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    
    Rahul Garg grants some additional permissions as per GNU General Public License version 3 
  section 7. These additional permissions can be found in a file exceptions.txt.
*/
public class PythonParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LIST", "ANNOT", "STRING", "MODULE", "NONE", "CONST", "STMT", "PYSTR", "DISCARD", "IF", "RETURN", "GLOBAL", "ASSIGN", "ASSNAME", "FUNCTION", "CALLFUNC", "ASSATTR", "ADD", "SUB", "MUL", "DIV", "GETATTR", "NAME", "IMPORT", "FROM", "FOR", "CLASS", "SLICE", "SUBSCRIPT", "SUBSCRIPTG", "SUBSCRIPTS", "SLICEOBJ", "COMPARE", "KEYWORD", "CGT", "CLT", "CEQ", "CNEQ", "CGTE", "CLTE", "COPY", "CFOR", "CIF", "RANGE", "LABEL", "GOTO", "CALLMETH", "DIM", "CONVERT", "PARFOR", "INT", "FLOAT", "ID", "ALPHA", "DIGIT", "WS", "'('", "')'", "'\\''", "'['", "']'", "'Annot'", "'Decorators'", "'\\'OP_ASSIGN\\''", "'\\'OP_APPLY\\''"
    };
    public static final int FUNCTION=18;
    public static final int CLASS=30;
    public static final int STMT=10;
    public static final int PARFOR=53;
    public static final int CONST=9;
    public static final int CLTE=43;
    public static final int FOR=29;
    public static final int SUB=22;
    public static final int FLOAT=55;
    public static final int SLICE=31;
    public static final int ID=56;
    public static final int ANNOT=5;
    public static final int EOF=-1;
    public static final int SUBSCRIPTS=34;
    public static final int SLICEOBJ=35;
    public static final int IF=13;
    public static final int GETATTR=25;
    public static final int NAME=26;
    public static final int IMPORT=27;
    public static final int COPY=44;
    public static final int CGT=38;
    public static final int RETURN=14;
    public static final int CFOR=45;
    public static final int COMPARE=36;
    public static final int DIGIT=58;
    public static final int GOTO=49;
    public static final int CGTE=42;
    public static final int ADD=21;
    public static final int CLT=39;
    public static final int CALLMETH=50;
    public static final int KEYWORD=37;
    public static final int CONVERT=52;
    public static final int CALLFUNC=19;
    public static final int CNEQ=41;
    public static final int RANGE=47;
    public static final int INT=54;
    public static final int ASSNAME=17;
    public static final int MODULE=7;
    public static final int LIST=4;
    public static final int MUL=23;
    public static final int ALPHA=57;
    public static final int PYSTR=11;
    public static final int WS=59;
    public static final int DISCARD=12;
    public static final int LABEL=48;
    public static final int ASSATTR=20;
    public static final int SUBSCRIPT=32;
    public static final int SUBSCRIPTG=33;
    public static final int NONE=8;
    public static final int DIM=51;
    public static final int ASSIGN=16;
    public static final int CIF=46;
    public static final int CEQ=40;
    public static final int DIV=24;
    public static final int GLOBAL=15;
    public static final int FROM=28;
    public static final int STRING=6;

        public PythonParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[98+1];
         }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "Python.g"; }


    public static class module_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start module
    // Python.g:124:1: module : MODULE '(' docString stmt ')' ;
    public final module_return module() throws RecognitionException {
        module_return retval = new module_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token MODULE1=null;
        Token char_literal2=null;
        Token char_literal5=null;
        docString_return docString3 = null;

        stmt_return stmt4 = null;


        CommonTree MODULE1_tree=null;
        CommonTree char_literal2_tree=null;
        CommonTree char_literal5_tree=null;

        try {
            // Python.g:124:8: ( MODULE '(' docString stmt ')' )
            // Python.g:124:11: MODULE '(' docString stmt ')'
            {
            root_0 = (CommonTree)adaptor.nil();

            MODULE1=(Token)input.LT(1);
            match(input,MODULE,FOLLOW_MODULE_in_module307); if (failed) return retval;
            if ( backtracking==0 ) {
            MODULE1_tree = (CommonTree)adaptor.create(MODULE1);
            root_0 = (CommonTree)adaptor.becomeRoot(MODULE1_tree, root_0);
            }
            char_literal2=(Token)input.LT(1);
            match(input,60,FOLLOW_60_in_module310); if (failed) return retval;
            pushFollow(FOLLOW_docString_in_module313);
            docString3=docString();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, docString3.getTree());
            pushFollow(FOLLOW_stmt_in_module315);
            stmt4=stmt();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, stmt4.getTree());
            char_literal5=(Token)input.LT(1);
            match(input,61,FOLLOW_61_in_module317); if (failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end module

    public static class docString_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start docString
    // Python.g:127:1: docString : ( pyconst | NONE );
    public final docString_return docString() throws RecognitionException {
        docString_return retval = new docString_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token NONE7=null;
        pyconst_return pyconst6 = null;


        CommonTree NONE7_tree=null;

        try {
            // Python.g:127:11: ( pyconst | NONE )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==CONST) ) {
                alt1=1;
            }
            else if ( (LA1_0==NONE) ) {
                alt1=2;
            }
            else {
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("127:1: docString : ( pyconst | NONE );", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // Python.g:127:14: pyconst
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_pyconst_in_docString329);
                    pyconst6=pyconst();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, pyconst6.getTree());

                    }
                    break;
                case 2 :
                    // Python.g:128:5: NONE
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    NONE7=(Token)input.LT(1);
                    match(input,NONE,FOLLOW_NONE_in_docString336); if (failed) return retval;
                    if ( backtracking==0 ) {
                    NONE7_tree = (CommonTree)adaptor.create(NONE7);
                    adaptor.addChild(root_0, NONE7_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end docString

    public static class pyconst_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start pyconst
    // Python.g:131:1: pyconst : CONST '(' ( pyStr | INT | FLOAT | NONE ) ')' ;
    public final pyconst_return pyconst() throws RecognitionException {
        pyconst_return retval = new pyconst_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token CONST8=null;
        Token char_literal9=null;
        Token INT11=null;
        Token FLOAT12=null;
        Token NONE13=null;
        Token char_literal14=null;
        pyStr_return pyStr10 = null;


        CommonTree CONST8_tree=null;
        CommonTree char_literal9_tree=null;
        CommonTree INT11_tree=null;
        CommonTree FLOAT12_tree=null;
        CommonTree NONE13_tree=null;
        CommonTree char_literal14_tree=null;

        try {
            // Python.g:131:9: ( CONST '(' ( pyStr | INT | FLOAT | NONE ) ')' )
            // Python.g:131:11: CONST '(' ( pyStr | INT | FLOAT | NONE ) ')'
            {
            root_0 = (CommonTree)adaptor.nil();

            CONST8=(Token)input.LT(1);
            match(input,CONST,FOLLOW_CONST_in_pyconst346); if (failed) return retval;
            if ( backtracking==0 ) {
            CONST8_tree = (CommonTree)adaptor.create(CONST8);
            root_0 = (CommonTree)adaptor.becomeRoot(CONST8_tree, root_0);
            }
            char_literal9=(Token)input.LT(1);
            match(input,60,FOLLOW_60_in_pyconst350); if (failed) return retval;
            // Python.g:131:24: ( pyStr | INT | FLOAT | NONE )
            int alt2=4;
            switch ( input.LA(1) ) {
            case 62:
                {
                alt2=1;
                }
                break;
            case INT:
                {
                alt2=2;
                }
                break;
            case FLOAT:
                {
                alt2=3;
                }
                break;
            case NONE:
                {
                alt2=4;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("131:24: ( pyStr | INT | FLOAT | NONE )", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // Python.g:131:25: pyStr
                    {
                    pushFollow(FOLLOW_pyStr_in_pyconst354);
                    pyStr10=pyStr();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, pyStr10.getTree());

                    }
                    break;
                case 2 :
                    // Python.g:131:33: INT
                    {
                    INT11=(Token)input.LT(1);
                    match(input,INT,FOLLOW_INT_in_pyconst358); if (failed) return retval;
                    if ( backtracking==0 ) {
                    INT11_tree = (CommonTree)adaptor.create(INT11);
                    adaptor.addChild(root_0, INT11_tree);
                    }

                    }
                    break;
                case 3 :
                    // Python.g:131:39: FLOAT
                    {
                    FLOAT12=(Token)input.LT(1);
                    match(input,FLOAT,FOLLOW_FLOAT_in_pyconst362); if (failed) return retval;
                    if ( backtracking==0 ) {
                    FLOAT12_tree = (CommonTree)adaptor.create(FLOAT12);
                    adaptor.addChild(root_0, FLOAT12_tree);
                    }

                    }
                    break;
                case 4 :
                    // Python.g:131:47: NONE
                    {
                    NONE13=(Token)input.LT(1);
                    match(input,NONE,FOLLOW_NONE_in_pyconst366); if (failed) return retval;
                    if ( backtracking==0 ) {
                    NONE13_tree = (CommonTree)adaptor.create(NONE13);
                    adaptor.addChild(root_0, NONE13_tree);
                    }

                    }
                    break;

            }

            char_literal14=(Token)input.LT(1);
            match(input,61,FOLLOW_61_in_pyconst369); if (failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end pyconst

    public static class pyStr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start pyStr
    // Python.g:134:1: pyStr : '\\'' PYSTR '(' INT ')' '\\'' ;
    public final pyStr_return pyStr() throws RecognitionException {
        pyStr_return retval = new pyStr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal15=null;
        Token PYSTR16=null;
        Token char_literal17=null;
        Token INT18=null;
        Token char_literal19=null;
        Token char_literal20=null;

        CommonTree char_literal15_tree=null;
        CommonTree PYSTR16_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree INT18_tree=null;
        CommonTree char_literal19_tree=null;
        CommonTree char_literal20_tree=null;

        try {
            // Python.g:134:7: ( '\\'' PYSTR '(' INT ')' '\\'' )
            // Python.g:134:10: '\\'' PYSTR '(' INT ')' '\\''
            {
            root_0 = (CommonTree)adaptor.nil();

            char_literal15=(Token)input.LT(1);
            match(input,62,FOLLOW_62_in_pyStr382); if (failed) return retval;
            PYSTR16=(Token)input.LT(1);
            match(input,PYSTR,FOLLOW_PYSTR_in_pyStr385); if (failed) return retval;
            if ( backtracking==0 ) {
            PYSTR16_tree = (CommonTree)adaptor.create(PYSTR16);
            root_0 = (CommonTree)adaptor.becomeRoot(PYSTR16_tree, root_0);
            }
            char_literal17=(Token)input.LT(1);
            match(input,60,FOLLOW_60_in_pyStr388); if (failed) return retval;
            INT18=(Token)input.LT(1);
            match(input,INT,FOLLOW_INT_in_pyStr391); if (failed) return retval;
            if ( backtracking==0 ) {
            INT18_tree = (CommonTree)adaptor.create(INT18);
            adaptor.addChild(root_0, INT18_tree);
            }
            char_literal19=(Token)input.LT(1);
            match(input,61,FOLLOW_61_in_pyStr393); if (failed) return retval;
            char_literal20=(Token)input.LT(1);
            match(input,62,FOLLOW_62_in_pyStr396); if (failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end pyStr

    public static class stmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start stmt
    // Python.g:137:1: stmt : ( STMT '(' '[' ( annotStmt )+ ']' ')' -> ^( STMT ( annotStmt )+ ) | STMT NONE );
    public final stmt_return stmt() throws RecognitionException {
        stmt_return retval = new stmt_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token STMT21=null;
        Token char_literal22=null;
        Token char_literal23=null;
        Token char_literal25=null;
        Token char_literal26=null;
        Token STMT27=null;
        Token NONE28=null;
        annotStmt_return annotStmt24 = null;


        CommonTree STMT21_tree=null;
        CommonTree char_literal22_tree=null;
        CommonTree char_literal23_tree=null;
        CommonTree char_literal25_tree=null;
        CommonTree char_literal26_tree=null;
        CommonTree STMT27_tree=null;
        CommonTree NONE28_tree=null;
        RewriteRuleTokenStream stream_STMT=new RewriteRuleTokenStream(adaptor,"token STMT");
        RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");
        RewriteRuleTokenStream stream_63=new RewriteRuleTokenStream(adaptor,"token 63");
        RewriteRuleTokenStream stream_60=new RewriteRuleTokenStream(adaptor,"token 60");
        RewriteRuleTokenStream stream_61=new RewriteRuleTokenStream(adaptor,"token 61");
        RewriteRuleSubtreeStream stream_annotStmt=new RewriteRuleSubtreeStream(adaptor,"rule annotStmt");
        try {
            // Python.g:137:7: ( STMT '(' '[' ( annotStmt )+ ']' ')' -> ^( STMT ( annotStmt )+ ) | STMT NONE )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==STMT) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==60) ) {
                    alt4=1;
                }
                else if ( (LA4_1==NONE) ) {
                    alt4=2;
                }
                else {
                    if (backtracking>0) {failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("137:1: stmt : ( STMT '(' '[' ( annotStmt )+ ']' ')' -> ^( STMT ( annotStmt )+ ) | STMT NONE );", 4, 1, input);

                    throw nvae;
                }
            }
            else {
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("137:1: stmt : ( STMT '(' '[' ( annotStmt )+ ']' ')' -> ^( STMT ( annotStmt )+ ) | STMT NONE );", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // Python.g:137:9: STMT '(' '[' ( annotStmt )+ ']' ')'
                    {
                    STMT21=(Token)input.LT(1);
                    match(input,STMT,FOLLOW_STMT_in_stmt409); if (failed) return retval;
                    if ( backtracking==0 ) stream_STMT.add(STMT21);

                    char_literal22=(Token)input.LT(1);
                    match(input,60,FOLLOW_60_in_stmt411); if (failed) return retval;
                    if ( backtracking==0 ) stream_60.add(char_literal22);

                    char_literal23=(Token)input.LT(1);
                    match(input,63,FOLLOW_63_in_stmt413); if (failed) return retval;
                    if ( backtracking==0 ) stream_63.add(char_literal23);

                    // Python.g:137:22: ( annotStmt )+
                    int cnt3=0;
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==NONE||LA3_0==STMT||(LA3_0>=DISCARD && LA3_0<=ASSIGN)||LA3_0==FUNCTION||LA3_0==IMPORT||(LA3_0>=FOR && LA3_0<=CLASS)||LA3_0==65) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // Python.g:137:23: annotStmt
                    	    {
                    	    pushFollow(FOLLOW_annotStmt_in_stmt416);
                    	    annotStmt24=annotStmt();
                    	    _fsp--;
                    	    if (failed) return retval;
                    	    if ( backtracking==0 ) stream_annotStmt.add(annotStmt24.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt3 >= 1 ) break loop3;
                    	    if (backtracking>0) {failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(3, input);
                                throw eee;
                        }
                        cnt3++;
                    } while (true);

                    char_literal25=(Token)input.LT(1);
                    match(input,64,FOLLOW_64_in_stmt420); if (failed) return retval;
                    if ( backtracking==0 ) stream_64.add(char_literal25);

                    char_literal26=(Token)input.LT(1);
                    match(input,61,FOLLOW_61_in_stmt422); if (failed) return retval;
                    if ( backtracking==0 ) stream_61.add(char_literal26);


                    // AST REWRITE
                    // elements: annotStmt, STMT
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 137:44: -> ^( STMT ( annotStmt )+ )
                    {
                        // Python.g:137:47: ^( STMT ( annotStmt )+ )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_STMT.next(), root_1);

                        if ( !(stream_annotStmt.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_annotStmt.hasNext() ) {
                            adaptor.addChild(root_1, stream_annotStmt.next());

                        }
                        stream_annotStmt.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    }

                    }
                    break;
                case 2 :
                    // Python.g:138:4: STMT NONE
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    STMT27=(Token)input.LT(1);
                    match(input,STMT,FOLLOW_STMT_in_stmt438); if (failed) return retval;
                    if ( backtracking==0 ) {
                    STMT27_tree = (CommonTree)adaptor.create(STMT27);
                    root_0 = (CommonTree)adaptor.becomeRoot(STMT27_tree, root_0);
                    }
                    NONE28=(Token)input.LT(1);
                    match(input,NONE,FOLLOW_NONE_in_stmt441); if (failed) return retval;
                    if ( backtracking==0 ) {
                    NONE28_tree = (CommonTree)adaptor.create(NONE28);
                    adaptor.addChild(root_0, NONE28_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end stmt

    public static class annotStmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start annotStmt
    // Python.g:141:1: annotStmt : ( annot pyStmt -> ^( ANNOT annot pyStmt ) | pyStmt );
    public final annotStmt_return annotStmt() throws RecognitionException {
        annotStmt_return retval = new annotStmt_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        annot_return annot29 = null;

        pyStmt_return pyStmt30 = null;

        pyStmt_return pyStmt31 = null;


        RewriteRuleSubtreeStream stream_annot=new RewriteRuleSubtreeStream(adaptor,"rule annot");
        RewriteRuleSubtreeStream stream_pyStmt=new RewriteRuleSubtreeStream(adaptor,"rule pyStmt");
        try {
            // Python.g:141:12: ( annot pyStmt -> ^( ANNOT annot pyStmt ) | pyStmt )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==65) ) {
                alt5=1;
            }
            else if ( (LA5_0==NONE||LA5_0==STMT||(LA5_0>=DISCARD && LA5_0<=ASSIGN)||LA5_0==FUNCTION||LA5_0==IMPORT||(LA5_0>=FOR && LA5_0<=CLASS)) ) {
                alt5=2;
            }
            else {
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("141:1: annotStmt : ( annot pyStmt -> ^( ANNOT annot pyStmt ) | pyStmt );", 5, 0, input);
